# primer-parcial-agustin-videla

./: .gitignore  CMakeLists.txt  README.md  SquareCraft.data  SquareCraft.js  SquareCraft.js.orig.js  SquareCraft.wasm  index.html  main.cpp  raylibTemplate.js  raylibTemplate.js.orig.js  raylibTemplate.wasm
clases/: Block.h  BlockFactory.cpp  BlockFactory.h  Block_Dirt.h
clases/Blocks/: Block.cpp  Block.h  BlockFactory.cpp  BlockFactory.h  Block_Dirt.cpp  Block_Dirt.h  Block_Iron.cpp  Block_Iron.h
clases/Collisions/: CollisionHandler.cpp  CollisionHandler.h  CollisionObserver.cpp  CollisionObserver.h
clases/Nueva carpeta/: Personaje.tsx  all.tsx  mapa.tmx  player.tsx
clases/Player/: Player.cpp  Player.h
clases/Renderer/: BlockRenderer.cpp  BlockRenderer.h  PlayerRenderer.cpp  PlayerRenderer.h  Renderer.h
clases/Tools/: Tool.h  ToolFactory.cpp  ToolFactory.h  Tool_Pickaxe.cpp  Tool_Pickaxe.h
clases/Vector2Functions/: HashFacade.cpp  HashFacade.h  SingletonHash.h  Vector2Adaptor.cpp  Vector2Adaptor.h  Vector2Hash.h  VectorTransform.cpp  VectorTransform.h
clases/Vector2Hash/: SingletonHash.h  Vector2Adaptor.cpp  Vector2Adaptor.h  Vector2Hash.cpp  Vector2Hash.h
clases/blocks/: Block.h  Block_Iron.h
clases/command/: command.h  command_block.h
clases/state/: playerState.h
resources/Mapa/: EntitledMap1.json  EntitledMap2.json  EntitledMap3.json  Mapa (1).h  Mapa.cpp  Mapa.h  Not-Minecraft.tsx  SingletonMapa.cpp  SingletonMapa.h  entitledMap.json  entitledMap;.tmx  not-maincra.tsx  sin nombre.json
